Fix for main panel div for dashboard being too wide. Removed 100% width.

--- a/src/main/webapp/css/blink.css
+++ b/src/main/webapp/css/blink.css
@@ -23,4 +23,7 @@
 
 #side-panel { display: none; }
 
-#main-panel { width: 100%; margin-left: 0px; }
+#main-panel { 
+	/* width: 100%; */
+	margin-left: 0px;
+}
